docs: Enhanced mobile deployment troubleshooting guide
- Added React version compatibility section with critical warning
- Documented React 18.2.0 + React Native 0.81.1 compatibility
- Detailed APK cache clearing and bundle rebuild process
- Added mobile-cloud integration testing procedures
- Comprehensive troubleshooting for version mismatch errors
- Step-by-step APK validation and testing workflow

Prevents future React version compatibility issues that cause APK crashes.
Critical for mobile deployment success after environment configuration changes.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>